Fixed the responsibility on smaller  screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -262,7 +262,7 @@ ul {
   border-radius: 32px;
   height: 600px;
 }
-@media (max-width:990px) { 
+@media (max-width:1000px) { 
   .about-me {
    text-align:center;
   }
@@ -275,6 +275,14 @@ ul {
     margin-top: 30px;
   }
   .anastasiia-photo {
-    height: 400px;
+    height: 450px;
   }
+  .contact-me {
+    display: block;
+    margin: 0 auto;
+    font-size: 18px;
+    padding: 18px 18px;
+    max-width: 200px;
+  
+   }
 }
